rusqlite_migration/src/errors/snapshots/rusqlite_migration__errors__tests__error_source_number_unrecognized.snap
---
source: rusqlite_migration/src/errors/tests.rs
expression: e.source()
snapshot_kind: text
---
Some(
    Hook(
        "unknown",
    ),
)
